--- a/web/about.html
+++ b/web/about.html
@@ -6,6 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Pokebin</title>
 </head>
+<style>
+	body {
+		background-color: black;
+		overflow: hidden;
+	}
+</style>
 
 <body>
 	<div id="app"></div>
