--- a/web/paste.html
+++ b/web/paste.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="robots" content="noindex, nofollow" />
     <!--<link rel="stylesheet" href="/assets/paste.css" />-->
     <link
       rel="apple-touch-icon"
